# URLScan-API

./: .gitignore  LICENSE  README.md  app.py  config.json  main.py  pyproject.toml  requirements.txt  urls_test.txt
src/: args_cli.py  debug_main.py  functions_options.py  ip_formatation_indetification.py  main.py  mods_verificator.py  obfuscation.py  shortener_checker.py  subdomain_counter.py  suspect_tld_verificator.py  url_counter.py  virus_total_verificator.py  vt_analyzer.py
src/core/: __init__.py  analyzer.py  ml_analyzer.py  phishing_analyzer.py  shortener_checker.py  subdomain_counter.py  tld_checker.py  train_model.py  url_counter.py
src/utils/: __init__.py  args_cli.py  functions_options.py  virustotal.py
tests/: ip_formatation_test.py  obfuscation_test.py  shortener_checker_test.py  subdomain_counter_test.py  test_ip_detection.py  test_obfuscation.py  test_obfuscation_benchmark.py  test_shortener_checker.py  test_subdomain_counter.py
