[project]
name = "Phishing-link-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"tldextract",
	"python-dotenv",
    "pandas",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "seaborn",
    "pyarrow",
    "flask",
    "beautifulsoup4",
    "requests",
    "python-whois"
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I"]
